--- a/proposta_1.html
+++ b/proposta_1.html
@@ -4,7 +4,7 @@
    </head>
    <body>
       <h1>Cabeçalho do sistema</h1>
-      <main>Isso aqui é conteudo da página</main>
+      <main>Aqui está o conteudo do site</main>
       <h1>Rodapé do sistema</h1>
    </body>
 </html>
