--- a/proposta_1.html
+++ b/proposta_1.html
@@ -1,10 +1,10 @@
 <html>
    <head>
-      <title>Proposta um para site da empresa</title>
+      <title>Proposta 1 para homepage da empresa</title>
    </head>
    <body>
-      <h1>Cabeçalho do sistema</h1>
-      <main>Aqui está o conteudo do site</main>
-      <h1>Rodapé do sistema</h1>
+      <h1>Título do site/h1>
+      <div>Decidir conteúdo</div>
+      <h1>Decidir rodapé/h1>
    </body>
 </html>
