conteudo do site

--- a/proposta_1.html
+++ b/proposta_1.html
@@ -4,7 +4,7 @@
    </head>
    <body>
       <h1>Título do site/h1>
-      <div>Decidir conteúdo</div>
+      <div>Conteúdo do site</div>
       <h1>Decidir rodapé/h1>
    </body>
 </html>
