--- a/proposta_1.html
+++ b/proposta_1.html
@@ -5,6 +5,6 @@
    <body>
       <h1>Título do site/h1>
       <div>Conteúdo do site</div>
-      <h1>Decidir rodapé/h1>
+      <h1>Rodapé do site/h1>
    </body>
 </html>
