--- a/proposta_1.html
+++ b/proposta_1.html
@@ -3,8 +3,8 @@
       <title>Proposta I para homepage da empresa</title>
    </head>
    <body>
-      <h1>Título do site/h1>
-      <div>Conteúdo do site</div>
-      <h1>Rodapé do site/h1>
+      <h1>Título do sistema/h1>
+      <div>Conteúdo do sistema</div>
+      <h1>Rodapé do sistema/h1>
    </body>
 </html>
