--- a/proposta_1.html
+++ b/proposta_1.html
@@ -1,10 +1,10 @@
 <html>
    <head>
-      <title>Proposta I para homepage da empresa</title>
+      <title>Proposta 1 para homepage da empresa</title>
    </head>
    <body>
       <h1>Título do sistema/h1>
       <div>Conteúdo do sistema</div>
-      <h1>Rodapé do sistema/h1>
+      <h1>Copyright Alura/h1>
    </body>
 </html>
