simbolo de marca registrada

--- a/proposta_1.html
+++ b/proposta_1.html
@@ -5,6 +5,6 @@
    <body>
       <h1>Título do sistema/h1>
       <div>Conteúdo do sistema</div>
-      <h1>Copyright Alura/h1>
+      <h1>Copyright Alura (R)/h1>
    </body>
 </html>
