--- a/proposta_1.html
+++ b/proposta_1.html
@@ -1,9 +1,9 @@
 <html>
    <head>
-      <title>Proposta 1 para a homepage da empresa<\title>
+      <title>Proposta 1 para a homepage da empresa</title>
    </head>
    <body>
-      <h1>Título do sistema/h1>
+      <h1>Título do sistema para a Caelum/h1>
       <div>Conteúdo do sistema</div>
       <h1>Copyright Alura (R)/h1>
    </body>
