--- a/proposta_1.html
+++ b/proposta_1.html
@@ -1,10 +1,15 @@
 <html>
    <head>
-      <title>Proposta 1 para a homepage da empresa</title>
+      <title>Proposta 1 para homepage da empresa</title>
    </head>
    <body>
-      <h1>Título do sistema para a Caelum/h1>
-      <div>Conteúdo do sistema</div>
-      <h1>Copyright Alura (R)/h1>
+      <header>
+         <h1>Cabeçalho do sistema</h1>
+      </header>
+      <h1>Título do sistema/h1>
+      <div>Aqui está o conteúdo do site da empresa</div>
+      <footer>
+         <h1>Copyright Alura/h1>
+      </footer>
    </body>
 </html>
