--- a/proposta_1.html
+++ b/proposta_1.html
@@ -4,7 +4,7 @@
    </head>
    <body>
       <header>
-         <h1>Cabeçalho do sistema</h1>
+         <h1>Cabeçalho da empresa</h1>
       </header>
       <h1>Título do sistema/h1>
       <div>Aqui está o conteúdo do site da empresa</div>
